Use the JPMS API directly, instead of reflectively
ModuleRef, ModuleReaderProxy and ModuleFinder called ModuleReference,
ModuleReader, ModuleLayer, Configuration and ResolvedModule by
reflection, so that the code would still compile and run on JDK 7 and 8.
With a minimum of JDK 17 they can be called directly.

This changes the types in the public API that were declared as Object
only because of that reflection:

  ClassGraph#addModuleLayer(Object) -> (ModuleLayer)
  ClassGraph#overrideModuleLayers(Object...) -> (ModuleLayer...)
  ModuleRef(Object, Object, ReflectionUtils) -> (ModuleReference, ModuleLayer)
  ModuleRef#getReference() -> ModuleReference
  ModuleRef#getLayer() -> ModuleLayer
  ModuleRef#getDescriptor() -> ModuleDescriptor

The ScanSpec fields and methods behind them are typed the same way, and
ScanSpec's reflective isModuleLayer() check is now the compiler's job.

ModuleReaderProxy#list() keeps returning a mutable list, since
ClasspathElementModule sorts it in place. A ModuleReader that returns
null from list(), in violation of its contract, is still treated as an
empty module rather than aborting the scan (#887), and an IOException
from a ModuleReader method is still reported as IllegalArgumentException,
as it was when the reflective call wrapped it.

Issue887Test and Issue704Test no longer duck-type the JPMS classes: they
define a real module layer, which is what they were reproducing anyway.